--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,12 +8,12 @@
             "name": "(lldb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/Users/walethea/cursus/my_project/cub3d2/cub3d/a.out",
-            "args": ["/Users/walethea/cursus/my_project/cub3d2/cub3d/map.cub"],
+            "program": "/Users/walethea/cursus/cub3d/cub3d/a.out",
+            "args": ["/Users/walethea/cursus/cub3d/cub3d/map.cub"],
             "stopAtEntry": false,
-            "cwd": "/Users/walethea/cursus/my_project/cub3d2/cub3d",
+            "cwd": "/Users/walethea/cursus/cub3d/cub3d",
             "environment": [],
-            "externalConsole": true,
+            "externalConsole": false,
             "MIMode": "lldb"
         }
     ]
