--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.associations": {
-        "cub3d.h": "c"
-    }
+        "cub3d.h": "c",
+        "__cxx_version": "c",
+        "__hash_table": "c",
+        "functional": "c",
+        "type_traits": "c",
+        "ios": "c",
+        "__locale": "c"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
