--- a/cub3d/srcs/srcs/Makefile
+++ b/cub3d/srcs/srcs/Makefile
@@ -6,7 +6,7 @@
 #    By: walethea <walethea@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/03/02 00:30:56 by walethea          #+#    #+#              #
-#    Updated: 2021/03/02 01:57:24 by walethea         ###   ########.fr        #
+#    Updated: 2021/03/02 02:24:39 by walethea         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,6 @@ SRCS	=	../get_next_line/get_next_line.c\
 			../get_next_line/get_next_line_utils.c\
 			./cast_sprite/cast_sprite.c\
 			./cast_sprite/cast_sprite_utils.c\
-			./movement/ft_movement.c\
 			./movement/key_hook_utils.c\
 			./parser/ft_atoi_colon.c\
 			./parser/parse_mod.c\
@@ -27,31 +26,39 @@ SRCS	=	../get_next_line/get_next_line.c\
 			./parser/parser_utils_3.c\
 			./raycast/ft_screenshot.c\
 			./raycast/image_utils.c\
-			./raycast/raycaster.c\
 			./raycast/raycaster_utils.c\
 			./main.c \
 
-BONUS_SRCS = ./bonus/
+BONUS_SRCS	=	./bonus/ft_movement.c\
+				./bonus/raycaster.c\
 
+MAIN_SRCS	= 	./raycast/raycaster.c\
+				./movement/ft_movement.c\
+
+				
 FLAGS	=	-Wall -Wextra -Werror
 FRAMEWORK	= -L./minilibx_opengl -lmlx -framework OpenGL -framework AppKit
 LIBFT	=	 -L../libft -lft
 OBJS	= $(SRCS:.c=.o)
+BONUS_OBJS	= $(BONUS_SRCS:.c=.o)
 all:	$(NAME)
 $(NAME):	$(OBJS)
 		@echo "------------>Please wait, minilibx compile...<------------"
 		@make re -C ../libft;
 		@make bonus -C ../libft;
 		@make -C../minilibx_opengl;
-		@gcc $(FLAGS) $(SRCS) $(LIBFT) $(FRAMEWORK) -o $(NAME)
+		@gcc $(FLAGS) $(SRCS) $(MAIN_SRCS) $(LIBFT) $(FRAMEWORK) -o $(NAME)
 		@echo "------------>SUCCESS<------------"
 
-bonus:	
+bonus:	$(BONUS_OBJS)
+		@gcc $(FLAGS) $(SRCS) $(BONUS_SRCS) $(LIBFT) $(FRAMEWORK) -o $(NAME)
+		@echo "------------>SUCCESS<------------"
 
 clean:	
 		@make clean -C ../libft
 		@make clean -C../minilibx_opengl
 		@rm -rf $(OBJS)
+		@rm -rf $(BONUS_OBJS)
 		@echo "------------>Delete all .o files<------------>"
 
 fclean:	clean
